Increased bordered height to stop scrollbar flicker

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -4,7 +4,6 @@
   grid-template-columns: 1fr;
   place-items: center;
   place-content: center;
-  overflow-y: auto;
 }
 
 input[class*="round"] {
