--- a/src/scss/utils/_helpers.scss
+++ b/src/scss/utils/_helpers.scss
@@ -16,7 +16,7 @@
   
   &:not(.bordered-side) {
     background-color: rgba($color-background, 0.2);
-    border-bottom: 32px solid transparent;
+    border-bottom: 64px solid transparent;
   }
   
   &-side {
